modules/aws-base/sg.tf
resource "aws_security_group" "allow" {
  name        = "allow"
  description = "Allow HTTP and SSH"
  vpc_id      = aws_vpc.default_vpc.id

  ingress {
    description = "SSH from any"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP from any"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
